[gd_scene load_steps=17 format=4 uid="uid://ddtu24d5cqke7"]

[ext_resource type="Texture2D" uid="uid://bt7dp8kkypi2q" path="res://Assets/World/quarrto.png" id="1_8s1y3"]
[ext_resource type="Script" path="res://Script/quarto.gd" id="1_cvqml"]
[ext_resource type="PackedScene" uid="uid://xt4qghslr78e" path="res://Scenes/player_td.tscn" id="2_tqegt"]
[ext_resource type="Shader" path="res://Script/scale_gray.gdshader" id="2_w5tcw"]
[ext_resource type="PackedScene" uid="uid://cssy064ugpm1q" path="res://Scenes/Tiles/tiles.tscn" id="3_h2c6q"]
[ext_resource type="PackedScene" uid="uid://l0jorritb706" path="res://Scenes/dialogue.tscn" id="6_0xfpb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tqxhw"]
shader = ExtResource("2_w5tcw")
shader_parameter/change = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g3vk2"]
size = Vector2(316, 83)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yglfx"]
size = Vector2(54.75, 108.5)

[sub_resource type="Animation" id="Animation_p4j8y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/Color:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_3e12o"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/Color:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_a5gpt"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background/Color:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"change_scene"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c08ju"]
_data = {
"RESET": SubResource("Animation_p4j8y"),
"fade_in": SubResource("Animation_3e12o"),
"fade_out": SubResource("Animation_a5gpt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bgygj"]
size = Vector2(23, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43l3p"]
size = Vector2(63.5, 107)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ht2ci"]
size = Vector2(121, 70)

[node name="Quarto" type="Node2D"]
script = ExtResource("1_cvqml")

[node name="Quarrto" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_tqxhw")
position = Vector2(161, 159)
scale = Vector2(5, 5)
texture = ExtResource("1_8s1y3")

[node name="player_td" parent="." instance=ExtResource("2_tqegt")]
position = Vector2(162, 180)

[node name="Camera2D" type="Camera2D" parent="player_td"]
zoom = Vector2(1.9, 1.9)
limit_left = 3
limit_top = 0
limit_right = 320
limit_bottom = 318
editor_draw_limits = true

[node name="Tiles" parent="." instance=ExtResource("3_h2c6q")]
position = Vector2(67, -256)
tile_map_data = PackedByteArray("AAD//wkAAQABAAIAAAAAAAkAAQABAAIAAAABAAkAAQABAAIAAAACAAkAAQABAAIAAAADAAkAAQABAAIAAAAEAAkAAQACAAIAAAAEAAgAAQACAAEAAAAEAAcAAQACAAEAAAAEAAYAAQACAAEAAAAEAAUAAQACAAEAAAAEAAQAAQACAAEAAAAEAAMAAQACAAEAAAADAAMAAQABAAIAAAACAAMAAQABAAIAAAABAAMAAQABAAIAAAAAAAMAAQABAAIAAAD//wMAAQAAAAIAAAD+/wMAAQAAAAAAAAD+/wQAAQACAAAAAAD+/wUAAQACAAEAAAD+/wYAAQACAAEAAAD+/wcAAQACAAEAAAD+/wgAAQACAAEAAAD+/wkAAQABAAIAAAA=")

[node name="Collision" type="Node2D" parent="."]

[node name="Wall" type="StaticBody2D" parent="Collision"]
collision_layer = 4

[node name="Collision" type="CollisionShape2D" parent="Collision/Wall"]
position = Vector2(164.375, 44.5)
shape = SubResource("RectangleShape2D_g3vk2")

[node name="Collision2" type="CollisionShape2D" parent="Collision/Wall"]
position = Vector2(161, 340)
shape = SubResource("RectangleShape2D_g3vk2")

[node name="Table" type="StaticBody2D" parent="Collision"]
collision_layer = 4

[node name="Collision" type="CollisionShape2D" parent="Collision/Table"]
position = Vector2(293.625, 243.25)
shape = SubResource("RectangleShape2D_yglfx")

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_c08ju")
}
autoplay = "fade_in"

[node name="Background" type="CanvasLayer" parent="."]

[node name="Color" type="ColorRect" parent="Background"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Area_Scene" type="Area2D" parent="."]

[node name="Collision" type="CollisionShape2D" parent="Area_Scene"]
position = Vector2(8.5, 249)
shape = SubResource("RectangleShape2D_bgygj")

[node name="Dialogue" parent="." instance=ExtResource("6_0xfpb")]
visible = false

[node name="Areas" type="Node2D" parent="."]

[node name="Mesa" type="Area2D" parent="Areas"]

[node name="Collision" type="CollisionShape2D" parent="Areas/Mesa"]
position = Vector2(290.75, 243.5)
shape = SubResource("RectangleShape2D_43l3p")

[node name="Cama" type="Area2D" parent="Areas"]

[node name="Collision" type="CollisionShape2D" parent="Areas/Cama"]
position = Vector2(253, 94)
shape = SubResource("RectangleShape2D_ht2ci")

[connection signal="body_entered" from="Area_Scene" to="." method="_on_area_scene_body_entered"]
[connection signal="body_entered" from="Areas/Mesa" to="." method="_on_mesa_body_entered"]
[connection signal="body_entered" from="Areas/Cama" to="." method="_on_cama_body_entered"]
